twistranet/themes/twistheme/static/css/content.css
/* Content-related stuff, including small content views */

#content {
  line-height: 1.3em;
}

.post {
    margin-top: 0.5em;
    padding: 5px;
    background-color: none;
    clear: both;
    border-bottom: 1px solid #f7f7f7;
}

.post.last {
    border-bottom:none !important;
}

.activepost {
  background-color: #fafafa;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  border-radius: 5px;
}


.author {
    font-weight: bold;
}


.post .summary-thumbnail {
    float: left;
    display: table-cell;
}

.entry {
    display: table-cell;
    width: 505px;
}

.noleftcol .entry {
    width: 688px;
}

.post div.notification {
    padding-left: 57px;
}

.entry .postmetadata {
  color: #999;
  text-align: left;
  line-height: auto;
}
  .entry div.postmetadata {
    margin: 7px 0 0;
    clear: left;
  }
  .entry .postmetadata ul {
    margin: 0;
    padding: 0;
  }
  .entry .postmetadata ul li {
    margin: 0 0.5em 0 0;
    padding: 1px 0 2px 17px;
    display: inline;
    list-style: none;
    list-style-image: none;
    list-style-type: none;
  }

.notification .postmetadata ul {
  display: inline;
}

.content-summary {
    font-size:      13px;
    font-weight:    bold;
    margin: 1em 0 1em 0;
}

.content-text {
    font-size:      13px;
    margin: 1em 0 1em 0;
}

.content-text table {
    margin: 8px 0 8px 0;
}

.content-text table tr th {
    background-color: #F6F6F6;
    padding: 10px;
}

.content-text table tbody tr td {
    vertical-align: top;
    padding: 5px;
    background-color: #F9F9F9;
}


.content-actions {
  float: right;
  margin: 0 0 0 0.5em;
  visibility: hidden;
  font-size: 10px;
  min-width: 20px;
  text-align: right;
}

.activepost .content-actions {
  visibility: visible;
}

.activepost .comment .content-actions {
  visibility: hidden;
}

.post .activecomment .content-actions,
.activepost .activecomment .content-actions {
  visibility: visible !important;
}

.content-actions ul {
  margin: 0;
  padding: 0;
  list-style: none;
  list-style-image: none;
  display: inline;
  white-space: no-wrap;
}

.content-actions ul li {
  list-style: none;
  list-style-image: none;
  display: inline;
  margin: 0 0 0 0.5em;
  padding: 0;
  white-space: no-wrap;
}

.content-actions ul li a:link,
.content-actions ul li a:visited {
  display: inline-block;
  font-size: 10px;
  color: #686868;
  text-align: right;
  padding: 2px 2px 2px 14px;
  white-space: no-wrap;
}

.content-actions ul li a:hover {
  color: #ad1c20;
}


/* content views*/

.content-file-view {
    background-color: #F7F7F7;
    border: medium none;
    margin: 10px 0 0;
    padding:10px 20px;
    -moz-border-radius: 5px 5px 5px 5px;
    -webkit-border-radius: 5px 5px 5px 5px;
    border-radius: 5px 5px 5px 5px;
    text-align: center;
}

.content-file-view img {
   max-width: 700px;
   max-height: 465px;
}

.content-file-link {
  font-weight: bold;
  margin: 15px 0;
}

/* public actions styles (share, like, comment, ...) */

.public-actions {
   clear:right;
   float: right;
   margin: 7px 0 0;
}

.post-File .public-actions,
.post-Document .public-actions {
   margin-top: 0;
}

.public-actions ul {
  margin: 0;
  padding: 0;
  list-style: none;
  list-style-image: none;
  display: inline;
  white-space: no-wrap;
  position: relative;
}

.public-actions ul.sharing-actions li {
  list-style: none;
  list-style-image: none;
  display: inline;
  margin: 0 0 0 2px;
  padding: 1px 0 2px;
  white-space: no-wrap;
}

.public-actions ul li.f_likes {
  display: none;
}

.n_likes {
  font-weight: bold;
  cursor: pointer;
}

.i_like a,
.i_unlike a {
  padding-left: 16px;
  text-decoration: none !important;
}

.i_like {
  background-image: url('../images/icons/sprite.png');
  background-position: 0 -176px;
  background-repeat: no-repeat;
  width: 16px;
}

.i_like:hover {
  background-position: 0 -160px;
}
.i_unlike {
  background-image: url('../images/icons/sprite.png');
  background-position: 0 -160px;
  background-repeat: no-repeat;
}
.i_unlike:hover{
  background-position: 0 -176px;
}

.f_likes {
    background-color: #F7F7F7;
    border: 1px solid #DDD;
    border-radius: 3px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    -webkit-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
    -moz-box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
    padding: 7px 10px !important;
    position: absolute;
    top: -5px;
    left: -5px;
    z-index: 100;
    width: 200px;
}


/*
    Comments Management
*/

.public-actions ul.comment-actions li {
  list-style: none;
  list-style-image: none;
  display: inline;
  margin: 0 0 0 4px;
  padding: 0;
  white-space: no-wrap;
}

.comment_ui a {
  background-image: url('../images/icons/sprite.png');
  background-repeat: no-repeat;
  padding: 1px 0 2px 16px;
}

.comment_ui a:hover { text-decoration: none !important}

.add-comment .comment_ui a {
  background-position: 0 -144px;
}

.add-comment .comment_ui a:hover {
  background-position: 0 -128px;
}

.view-all-comments .comment_ui a {
  background-position: 0 -128px;
}

.few-comments .comment_ui a {
  background: none !important;
  cursor: default;
}


.comment_count {font-weight: bold;}

.few-comments .comment_count,
.add-comment .comment_count {display: none;}

.comments-container {
  clear: both;
  margin-top: 7px;
}

.comment .publisher {
    display: inline;
}

.comment {
    padding:            5px ;
    margin:             5px 5px 5px 0;
    background-color:   #f7f7f7;
}

.view-metadata .activepost {
  background-color: transparent;
}

.view-metadata .public-actions {
  float: none !important;
}

.view-metadata .comments-container {
  width: 500px;
}

.view-metadata .comments-container textarea {
  width: 483px !important;
}

.view-metadata .comments-container .comment {
  width: 486px !important;
}

.postmetadata {
  margin: 0;
  color: #999;
  }
  .postmetadata .date, .postmetadata .author, .postmetadata .comment, .postmetadata .category, .postmetadata .tag, .postmetadata .edit {
    margin:  0 0 0 2px;
    padding: 0 0 0 20px;
  }

  .postmetadata .date           { background: url(../images/icons/sprite.png) 0 0 no-repeat; }

  .postmetadata .author         { background: url(../images/icons/sprite.png) 0 -16px no-repeat; }

  .postmetadata .target         { background: url(../images/icons/sprite.png) 0 -32px no-repeat; }
  .postmetadata .target-public  { display: none !important}
  
  .postmetadata .category       { background: url(../images/icons/sprite.png) 0 -48px no-repeat; }

  .postmetadata .tag            { background: url(../images/icons/sprite.png) 0 -64px no-repeat; }

